# stock-analyzer

./: .env.template  .gitignore  TASK-1-SOLUTION.md  TASK-2-SOLUTION.md  TASK-3-SOLUTION.md  TASK-4-SOLUTION.md  pyproject.toml
src/stock_analyzer/: main.py
src/stock_analyzer/assistants/: __init__.py  assistants.py  tools.py
src/stock_analyzer/config/: __init__.py  config.py  tools.py
src/stock_analyzer/services/: stocks_service.py
src/stock_analyzer/tools/: __init__.py  definitions.py  management.py
